--- a/Trabalho1/nbproject/private/private.properties
+++ b/Trabalho1/nbproject/private/private.properties
@@ -1,6 +1,4 @@
 deploy.ant.properties.file=C:\\Users\\Adrian\\AppData\\Roaming\\NetBeans\\11.2\\config\\GlassFishEE6\\Properties\\gfv3558810716.properties
-file.reference.gson-2.8.0.jar=C:\\Users\\Adrian\\Desktop\\Trabalho1\\gson-2.8.2.jar
-file.reference.gson-2.8.0.jar-1=C:\\Users\\Adrian\\Desktop\\Trabalho1\\gson-2.8.2.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Adrian/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/Users/Adrian/GlassFish_Server/glassfish
@@ -8,5 +6,5 @@ j2ee.server.instance=[C:\\Users\\Adrian\\GlassFish_Server\\glassfish;C:\\Users\\
 j2ee.server.middleware=C:/Users/Adrian/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Adrian\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
