--- a/Trabalho1/nbproject/project.properties
+++ b/Trabalho1/nbproject/project.properties
@@ -13,7 +13,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/pages/index.html
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.8.0.jar-1=../../gson-2.8.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,9 +46,7 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.restapi.classpath}:\
     ${libs.Gson.classpath}:\
-    ${file.reference.gson-2.8.0.jar}:\
-    ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.gson-2.8.0.jar-1}
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
